--- a/gestion-tutorat-front/src/app/components/import/import.component.html
+++ b/gestion-tutorat-front/src/app/components/import/import.component.html
@@ -1,6 +1,6 @@
 <div class="container mt-5">
     <div class="card shadow-lg">
-      <div class="card-header bg-primary text-white text-center">
+      <div class="card-header text-center">
         <h4 class="card-title mb-0">{{ 'IMPORT.TITLE' | translate }}</h4>
       </div>
       <div class="card-body">
