--- a/gestion-tutorat-front/src/styles.css
+++ b/gestion-tutorat-front/src/styles.css
@@ -55,3 +55,6 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   color: #fff;
   border-color: #7b5fc9;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
