--- a/gestion-tutorat-front/src/app/app.component.html
+++ b/gestion-tutorat-front/src/app/app.component.html
@@ -34,6 +34,11 @@
           {{ 'NAV.CONNEXION' | translate }}
         </a>
 
+        <!-- Déonnexion -->
+        <a [href]="casLogoutUrl" class="nav-link">
+          {{ 'NAV.DECONNEXION' | translate }}
+        </a>
+
 
         <!-- Création de compte -->
         <!--<li class="nav-item">
