--- a/gestion-tutorat-front/src/app/components/home/home.component.html
+++ b/gestion-tutorat-front/src/app/components/home/home.component.html
@@ -1,3 +1,4 @@
+<!-- contenu habituel -->
 <div class="home-container text-center">
   <img src="assets/logo-imtbs.png" alt="Logo IMTBS" class="imtbs-logo" />
   <h1 class="welcome-title">Bienvenue sur la plateforme de gestion du tutorat</h1>
