--- a/gestion-tutorat-front/src/app/components/affiche-tuteurs/affiche-tuteurs.component.html
+++ b/gestion-tutorat-front/src/app/components/affiche-tuteurs/affiche-tuteurs.component.html
@@ -15,11 +15,11 @@
       class="form-control"
       style="width: 140px; padding: 5px 8px; font-size: 14px;"
     />
-    <button (click)="onSearch()" class="btn btn-primary" style="background: #00abc7; border: none;">
-      {{ 'COMMON.SEARCH' | translate }}
+    <button (click)="onSearch()" class="icon-btn search" title="Rechercher">
+      <i class="bi bi-search"></i>
     </button>
-    <button (click)="onClearSearch()" class="btn btn-secondary" style="background: #9b59b6; border: none;">
-      {{ 'COMMON.RESET' | translate }}
+    <button (click)="onClearSearch()" class="icon-btn reset" title="Réinitialiser">
+      <i class="bi bi-x-circle"></i>
     </button>
   </div>
 </div>
