--- a/gestion-tutorat-front/src/app/components/majeure-create/majeure-create.component.html
+++ b/gestion-tutorat-front/src/app/components/majeure-create/majeure-create.component.html
@@ -9,25 +9,25 @@
         <!-- Code -->
         <div class="form-group">
           <label>{{ 'CREATE.CODE' | translate }}</label>
-          <input type="text" formControlName="code" class="form-control" placeholder="{{ 'CREATE.CODE' | translate }}" />
+          <input type="text" formControlName="code" class="form-control" />
         </div>
 
         <!-- Groupe -->
         <div class="form-group">
           <label>{{ 'CREATE.GROUP_NAME' | translate }}</label>
-          <input type="text" formControlName="groupe" class="form-control" placeholder="{{ 'CREATE.GROUP_NAME' | translate }}" />
+          <input type="text" formControlName="groupe" class="form-control" />
         </div>
 
         <!-- Département -->
         <div class="form-group">
           <label>{{ 'CREATE.DEPARTMENT' | translate }}</label>
-          <input type="text" formControlName="dept" class="form-control" placeholder="{{ 'CREATE.DEPARTMENT' | translate }}" />
+          <input type="text" formControlName="dept" class="form-control" />
         </div>
 
         <!-- Responsable -->
         <div class="form-group">
           <label>{{ 'CREATE.RESPONSIBLE' | translate }}</label>
-          <input type="text" formControlName="responsible" class="form-control" placeholder="{{ 'CREATE.RESPONSIBLE' | translate }}" />
+          <input type="text" formControlName="responsible" class="form-control" />
         </div>
 
         <!-- Langue -->
@@ -58,7 +58,7 @@
         <!-- Programme -->
         <div class="form-group">
           <label>{{ 'CREATE.PROGRAM' | translate }}</label>
-          <input type="text" formControlName="programme" class="form-control" placeholder="{{ 'CREATE.PROGRAM' | translate }}" />
+          <input type="text" formControlName="programme" class="form-control" />
         </div>
 
         <!-- Submit Button -->
