--- a/gestion-tutorat-front/src/app/components/user-profile/user-profile.component.html
+++ b/gestion-tutorat-front/src/app/components/user-profile/user-profile.component.html
@@ -3,13 +3,13 @@
     <!-- En-tête -->
     <div class="card-header">
       <div class="avatar">{{ user?.name?.charAt(0)?.toUpperCase() }}</div>
-    </div>
 
-    <!-- Bouton de déconnexion -->
+          <!-- Bouton de déconnexion -->
     <div class="text-center mt-4">
       <button class="btn btn-purple" (click)="logout()">
         {{ 'NAV.DECONNEXION' | translate }}
       </button>
+    </div>
     </div>
 
     <!-- Détails -->
@@ -33,7 +33,7 @@
       
       <!-- Bouton pour accéder à la liste des étudiants tutorés (visible uniquement pour les profs) -->
       <div *ngIf="user?.role === 'prof'" class="text-center mt-4">
-        <button class="btn btn-purple" (click)="goToTutees()">
+        <button class="btn" (click)="goToTutees()">
           {{ 'PROFILE.VIEW_TUTORED_STUDENTS' | translate }}
         </button>
       </div>
