--- a/gestion-tutorat-front/src/app/components/affiche-tuteurs/affiche-tuteurs.component.css
+++ b/gestion-tutorat-front/src/app/components/affiche-tuteurs/affiche-tuteurs.component.css
@@ -192,7 +192,7 @@ tr:hover td {
     transition: background 0.18s, color 0.18s, box-shadow 0.18s;
     margin-left: 4px;
     outline: none;
-}
+  }
 
 .icon-btn.edit {
     color: #2196F3;
@@ -246,12 +246,21 @@ a {
 }
 
 .icon-btn.edit mat-icon {
-    color: #333;
-}
-
-.icon-btn.delete mat-icon {
-    color: #333;
-}
+    color: #00abc7;
+  }
+  .icon-btn.delete mat-icon {
+    color: #9b59b6;
+  }
+  .icon-btn.edit:hover {
+    background: #008fa3;
+  }
+  .icon-btn.delete:hover {
+    background: #7d3bb8;
+  }
+  .icon-btn.edit:hover mat-icon,
+  .icon-btn.delete:hover mat-icon {
+    color: #fff;
+  }
 
 .icon-btn.search,
 .icon-btn.reset {
@@ -266,15 +275,3 @@ a {
     box-shadow: 0 2px 8px rgba(0,0,0,0.08);
 }
 
-.icon-btn.edit:hover {
-    background: #333;
-}
-
-.icon-btn.delete:hover {
-    background: #333;
-}
-
-.icon-btn.edit:hover mat-icon,
-.icon-btn.delete:hover mat-icon {
-    color: #fff;
-}
