--- a/gestion-tutorat-front/src/app/components/affiche-majeures/affiche-majeures.component.css
+++ b/gestion-tutorat-front/src/app/components/affiche-majeures/affiche-majeures.component.css
@@ -191,21 +191,6 @@
   color: #333;
 }
 
-.icon-btn {
-  background: none;
-  border: none;
-  cursor: pointer;
-  padding: 7px 10px;
-  border-radius: 50%;
-  font-size: 1.25em;
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  transition: background 0.18s, color 0.18s, box-shadow 0.18s;
-  margin-left: 4px;
-  outline: none;
-}
-
 .icon-btn.edit mat-icon {
   color: #333;
 }
@@ -355,32 +340,29 @@
   background: none;
   border: none;
   cursor: pointer;
-  padding: 4px 6px;
-  margin-right: 4px;
-  border-radius: 4px;
-  font-size: 1.2em;
+  padding: 7px 10px;
+  border-radius: 50%;
+  font-size: 1em;
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  transition: background 0.15s;
+  transition: background 0.18s, color 0.18s, box-shadow 0.18s;
+  margin-left: 0px;
+  outline: none;
 }
 
 .icon-btn.edit mat-icon {
-  color: #333;
+  color: #00abc7;
 }
-
 .icon-btn.delete mat-icon {
-  color: #333;
+  color: #9b59b6;
 }
-
 .icon-btn.edit:hover {
-  background: #222;
+  background: #008fa3;
 }
-
 .icon-btn.delete:hover {
-  background: #222;
+  background: #7d3bb8;
 }
-
 .icon-btn.edit:hover mat-icon,
 .icon-btn.delete:hover mat-icon {
   color: #fff;
